--- a/angular.json
+++ b/angular.json
@@ -29,9 +29,15 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.css"
+              "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
+              //"node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/angular-bootstrap-md/assets/scss/mdb.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/pouchdb/dist/pouchdb.min.js",
+              "node_modules/chart.js/dist/Chart.js",
+              "node_modules/hammerjs/hammer.min.js"
+            ]
           },
           "configurations": {
             "production": {
