--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.1",
+    "@angular/animations": "^8.0.3",
+    "@angular/cdk": "^8.2.0",
     "@angular/common": "~8.0.1",
     "@angular/compiler": "~8.0.1",
     "@angular/core": "~8.0.1",
     "@angular/forms": "~8.0.1",
+    "@angular/material": "^6.2.1",
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "@ng-bootstrap/ng-bootstrap": "^5.0.0",
     "angular-bootstrap-md": "^8.1.1",
+    "angular-material": "^1.1.20",
     "bootstrap": "^4.3.1",
     "bootstrap-material-design": "^4.1.1",
     "chart.js": "^2.5.0",
